--- a/.github/workflows/deploy-service.yml
+++ b/.github/workflows/deploy-service.yml
@@ -58,7 +58,7 @@ jobs:
           if [ ${#components[@]} -eq 0 ]; then
             json_array="[]"
           else
-            printf '%s\n' "${components[@]}" | sort -u | jq -R . | jq -s . > /tmp/components.json
+            printf '%s\n' "${components[@]}" | sort -u | jq -R . | jq -s -c . > /tmp/components.json
             json_array=$(cat /tmp/components.json)
           fi
           
@@ -66,7 +66,7 @@ jobs:
           if [ ${#files[@]} -eq 0 ]; then
             files_json="[]"
           else
-            printf '%s\n' "${files[@]}" | jq -R . | jq -s . > /tmp/files.json
+            printf '%s\n' "${files[@]}" | jq -R . | jq -s -c . > /tmp/files.json
             files_json=$(cat /tmp/files.json)
           fi
           
