--- a/.github/workflows/deploy-service.yml
+++ b/.github/workflows/deploy-service.yml
@@ -31,25 +31,22 @@ jobs:
         id: set-matrix
         shell: bash
         run: |
-          # This script maps changed file paths to component names.
-          # Add your own logic here.
-          # For example, if a file in 'services/api/' changes, we deploy 'api'.
-          
           components=()
           files=()
           
+          # Note: Order of components is important for deployment.
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-            if [[ "$file" == components/cortex_agent/** ]]; then
-              components+=("cortex_agent")
-              files+=("$file")
-            elif [[ "$file" == components/cortex_search/** ]]; then
+            if [[ "$file" == components/cortex_search/** ]]; then
               components+=("cortex_search")
-              files+=("$file")
-            elif [[ "$file" == components/mcp_server/** ]]; then
-              components+=("mcp_server")
               files+=("$file")
             elif [[ "$file" == components/semantic_view/** ]]; then
               components+=("semantic_view")
+              files+=("$file")
+            elif [[ "$file" == components/cortex_agent/** ]]; then
+              components+=("cortex_agent")
+              files+=("$file")
+            elif [[ "$file" == components/mcp_server/** ]]; then
+              components+=("mcp_server")
               files+=("$file")
             fi
           done
@@ -133,6 +130,10 @@ jobs:
               fi
             fi
           done
+      - name: Evaluate Component ${{ matrix.component }}
+        run: |
+          echo "Placeholder for evaluating ${{ matrix.component }}..."
+
 
   # Job 3: Deploy all changed components to the Staging environment
   deploy-test:
@@ -191,6 +192,9 @@ jobs:
               fi
             fi
           done
+      - name: Evaluate Component ${{ matrix.component }}
+        run: |
+          echo "Placeholder for evaluating ${{ matrix.component }}..."
 
   # Job 4: Deploy all changed components to Production with a manual approval gate
   deploy-prod:
@@ -249,3 +253,6 @@ jobs:
               fi
             fi
           done
+      - name: Evaluate Component ${{ matrix.component }}
+        run: |
+          echo "Placeholder for evaluating ${{ matrix.component }}..."
